--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Copy to .env.local and fill with real values. Never commit .env.local or real keys here.
 
-# Resend – https://resend.com/api-keys (from address must use a verified domain)
+# Resend – https://resend.com/api-keys
+# For testing: use onboarding@resend.dev (no verification). For production: verify your domain at https://resend.com/domains
 RESEND_API_KEY=re_xxxxxxxxxxxx
-RESEND_FROM=Medical Travel <noreply@yourdomain.com>
+RESEND_FROM="Medical Travel <onboarding@resend.dev>"
 
 # Google reCAPTCHA v3 – https://www.google.com/recaptcha/admin
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your-recaptcha-site-key
