--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,30 @@
 # Copy to .env.local and fill with real values. Never commit .env.local or real keys here.
 
-# Resend – https://resend.com/api-keys
+# === Email (Resend) ===
+# https://resend.com/api-keys
 # For testing: use onboarding@resend.dev (no verification). For production: verify your domain at https://resend.com/domains
 RESEND_API_KEY=re_xxxxxxxxxxxx
 RESEND_FROM="Medical Travel <onboarding@resend.dev>"
 
-# Google reCAPTCHA v3 – https://www.google.com/recaptcha/admin
+# === Contact routing ===
+# Where inquiries are sent. Use your production email (e.g. info@medicaltoursindia.com)
+CONTACT_TO_EMAIL=info@medicaltoursindia.com
+
+# === Display contact (shown in footer, confirmation emails) ===
+NEXT_PUBLIC_CONTACT_EMAIL=info@medicaltoursindia.com
+NEXT_PUBLIC_WHATSAPP_NUMBER=919032292171
+
+# === Google reCAPTCHA v3 ===
+# https://www.google.com/recaptcha/admin
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your-recaptcha-site-key
 RECAPTCHA_SECRET_KEY=your-recaptcha-secret-key
+
+# === Google Analytics & Ads ===
+# GA4 Measurement ID (e.g. G-XXXXXXXXXX)
+NEXT_PUBLIC_GA_MEASUREMENT_ID=
+
+# Google Ads ID (e.g. AW-XXXXXXXXXX) - optional, for conversion tracking
+NEXT_PUBLIC_GOOGLE_ADS_ID=
+
+# Google Ads conversion label - from your conversion action in Google Ads (optional)
+NEXT_PUBLIC_GOOGLE_ADS_CONVERSION_LABEL=
