--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ RESEND_API_KEY=re_xxxxxxxxxxxx
 RESEND_FROM="Medical Travel <onboarding@resend.dev>"
 
 # === Contact routing ===
-# Where inquiries are sent. Use your production email (e.g. info@medicaltoursindia.com)
-CONTACT_TO_EMAIL=info@medicaltoursindia.com
+# Where inquiries are sent
+CONTACT_TO_EMAIL=info@techdr.in
 
 # === Display contact (shown in footer, confirmation emails) ===
-NEXT_PUBLIC_CONTACT_EMAIL=info@medicaltoursindia.com
+NEXT_PUBLIC_CONTACT_EMAIL=info@techdr.in
 NEXT_PUBLIC_WHATSAPP_NUMBER=919032292171
 
 # === Google reCAPTCHA v3 ===
